4.42

- Improved: Make use of new A3 2.02 scripting commands where possible
- Improved: Use new import keyword to load UI configs from the game itself rather than copying them into description.ext